--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@reach/router": "^1.3.4",
+    "i18next": "^19.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.10",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
