--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@reach/router": "^1.3.4",
+    "apexcharts": "^3.26.0",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "typescript": "^4.1.2",
