Add dashboard components.

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "react/prop-types": "off"
   }
 }
