--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
