--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,7 +1,7 @@
 name: Test code
 on: pull_request
 jobs:
-  deploy:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
