Add eslint exceptions for tests.

--- a/.eslintrc
+++ b/.eslintrc
@@ -31,5 +31,16 @@
   "rules": {
     "linebreak-style": "off",
     "react/prop-types": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.ts?(x)"
+      ],
+      "rules": {
+        "react/jsx-props-no-spreading": "off",
+        "@typescript-eslint/no-non-null-assertion": "off"
+      }
+    }
+  ]
 }
