--- a/.github/workflows/s3-deploy.yml
+++ b/.github/workflows/s3-deploy.yml
@@ -1,11 +1,46 @@
-name: Deploy Preview
-on: pull_request
+name: Production deploy
+on: 
+  push:
+    branches:
+      - main
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+           ${{ runner.os }}-yarn-
+          
+      - name: Install
+        run: yarn install
+
+      - name: Build
+        run: yarn run build
+        
+      - name: Test
+        uses: mattallty/jest-github-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          test-command: "yarn test"
+          coverage-comment: false
+
   deploy:
+    needs: tests
     runs-on: ubuntu-latest
     environment: S3
     env:
-      PUBLIC_URL: http://poject-milou-frontend.s3-website.eu-central-1.amazonaws.com/preview/${{ github.event.number }}
+      PUBLIC_URL: http://poject-milou-frontend.s3-website.eu-central-1.amazonaws.com/
     steps:
       - uses: actions/checkout@v1
       
