--- a/.github/workflows/s3-deploy.yml
+++ b/.github/workflows/s3-deploy.yml
@@ -81,7 +81,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DEPLOY_PREVIEW_SECRET }}
           AWS_REGION: "eu-central-1"
           SOURCE_DIR: "build"
-          DEST_DIR: preview/${{ github.event.number }}
+          DEST_DIR: /
           
       - name: Set success deployment status
         if: success()
