--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.11.3",
     "@reach/router": "^1.3.4",
     "eslint": "^7.11.0",
+    "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
