--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
+    "apexcharts": "^3.26.0",
+    "react-apexcharts": "^1.3.7",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "react": "^17.0.1",
