--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
+    "react-number-format": "^4.5.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
