--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
+    "classnames": "^2.2.6",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
+    "react-number-format": "^4.5.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -25,6 +28,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/reach__router": "^1.3.7",
