--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "lint": "tsc --noEmit && eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
     "eslint": "^7.11.0",
     "font-awesome": "^4.7.0",
