--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "react-scripts": "4.0.3"
