--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "serve": "serve -s build",
     "eject": "react-scripts eject",
     "format": "lint-staged",
     "lint": "tsc --noEmit && eslint .",
@@ -16,8 +17,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
-    "email-validator": "^2.0.4",
     "classnames": "^2.2.6",
+    "email-validator": "^2.0.4",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "prop-types": "^15.7.2",
@@ -53,7 +54,8 @@
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "serve": "^11.3.2"
   },
   "browserslist": {
     "production": [
