--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,9 +23,11 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
-on:
-  release:
-    types: [created]
+on: 
+  push:
+    branches:
+      - main
+      - refactor/new-aws-deployment # For testing only
 
 name: Deploy to Amazon ECS
 
@@ -33,7 +35,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: production
+    environment: S3
 
     steps:
     - name: Checkout
@@ -42,8 +44,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.DEPLOY_PREVIEW_KEY }}
+        aws-secret-access-key: ${{ secrets.DEPLOY_PREVIEW_SECRET }}
         aws-region: us-east-2
 
     - name: Login to Amazon ECR
@@ -54,7 +56,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: my-ecr-repo
+        ECR_REPOSITORY: milou-frontend
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
@@ -68,14 +70,14 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
-        container-name: sample-app
+        task-definition: ecs-task-definition.json
+        container-name: milou-frontend
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: sample-app-service
-        cluster: default
+        service: milou-frontend-ecs-service
+        cluster: milou-frontend
         wait-for-service-stability: true
