--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "serve": "serve -s build",
+    "serve": "serve -s build -l 3000",
     "eject": "react-scripts eject",
     "format": "lint-staged",
     "lint": "tsc --noEmit && eslint .",
