--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.DEPLOY_PREVIEW_KEY }}
         aws-secret-access-key: ${{ secrets.DEPLOY_PREVIEW_SECRET }}
-        aws-region: us-east-2
+        aws-region: eu-central-1
 
     - name: Login to Amazon ECR
       id: login-ecr
