--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
-    "email-validator": "^2.0.4",
+    "apexcharts": "^3.26.0",
     "classnames": "^2.2.6",
+    "email-validator": "^2.0.4",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-number-format": "^4.5.1",
