--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
+    "apexcharts": "^3.26.0",
+    "react-apexcharts": "^1.3.7",
     "email-validator": "^2.0.4",
     "classnames": "^2.2.6",
     "eslint": "^7.11.0",
