--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
     "apexcharts": "^3.26.0",
-    "react-apexcharts": "^1.3.7",
-    "email-validator": "^2.0.4",
     "classnames": "^2.2.6",
+    "email-validator": "^2.0.4",
     "eslint": "^7.11.0",
     "i18next": "^19.9.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-number-format": "^4.5.1",
     "typescript": "^4.1.2",
+    "uuid-validate": "^0.0.3",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "@types/reach__router": "^1.3.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/uuid-validate": "0.0.1",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-eslint": "^10.1.0",
