--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prettier-fix": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@reach/router": "^1.3.4",
@@ -20,6 +23,7 @@
     "classnames": "^2.2.6",
     "email-validator": "^2.0.4",
     "eslint": "^7.11.0",
+    "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
