--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "prettier-fix": "prettier --write ."
   },
   "dependencies": {
+    "@date-io/moment": "1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@reach/router": "^1.3.4",
     "apexcharts": "^3.26.0",
     "classnames": "^2.2.6",
@@ -26,6 +28,7 @@
     "eslint": "^7.11.0",
     "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
