--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier-fix": "prettier --write ."
   },
   "dependencies": {
-    "@date-io/moment": "1.3.13",
+    "@date-io/moment": "^2.10.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
