--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
     "moment": "^2.29.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
