--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-apexcharts": "^1.3.7",
+    "react-apexcharts": "1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-infinite-scroll-component": "^6.0.0",
