--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "lint-staged",
     "lint": "tsc --noEmit && eslint .",
     "prettier-check": "prettier --check .",
-    "prettier-fix": "prettier --write ."
+    "prettier-fix": "prettier --write .",
+    "postinstall": "patch-package",
+    "heroku-postbuild": "patch-package"
   },
   "dependencies": {
-    "@date-io/moment": "1.3.13",
+    "@date-io/moment": "^2.10.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -29,9 +31,11 @@
     "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
     "moment": "^2.29.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-apexcharts": "^1.3.7",
+    "react-apexcharts": "1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-infinite-scroll-component": "^6.0.0",
