--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "format": "lint-staged",
     "lint": "tsc --noEmit && eslint .",
     "prettier-check": "prettier --check .",
-    "prettier-fix": "prettier --write .",
-    "postinstall": "patch-package",
-    "heroku-postbuild": "patch-package"
+    "prettier-fix": "prettier --write ."
   },
   "dependencies": {
     "@date-io/moment": "^2.10.8",
@@ -31,11 +29,9 @@
     "font-awesome": "^4.7.0",
     "i18next": "^19.9.2",
     "moment": "^2.29.1",
-    "patch-package": "^6.4.7",
-    "postinstall-postinstall": "^2.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-apexcharts": "1.3.7",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.10",
     "react-infinite-scroll-component": "^6.0.0",
